--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,12 @@ statsmodels==0.12.1
 threadpoolctl==2.1.0
 Werkzeug==1.0.1
 xgboost==1.3.3
+certifi==2020.12.5
+chardet==4.0.0
+chart-studio==1.1.0
+dash-auth==1.4.1
+Flask-SeaSurf==0.3.0
+idna==2.10
+requests==2.25.1
+ua-parser==0.10.0
+urllib3==1.26.3
